--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ layout: default
         {{ post.excerpt }}
       </div>
 
-      <a href="{{ site.baseurl }}{{ post.url }}" class="read-more">Read More</a>
+      <button class="read-more"><a href="{{ site.baseurl }}{{ post.url }}" class="read-more">Read More</a></button>
     </article>
   {% endfor %}
 </div>
