--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ layout: default
         {{ post.excerpt }}
       </div>
 
-      <button><a href="{{ site.baseurl }}{{ post.url }}" class="read-more">Read More</a></button>
+      <a href="{{ site.baseurl }}{{ post.url }}" class="read-more"><button>Read More</button></a>
     </article>
   {% endfor %}
 </div>
