--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ layout: default
     <span class="pagination-item older">Older</span>
   {% endif %}
   {% if paginator.previous_page %}
-      <a class="pagination-item newer" href="{{ site.baseurl }}">Newer</a>
+      <a class="pagination-item newer" href="{{ paginator.previous_page_path }}">Newer</a>
   {% else %}
     <span class="pagination-item newer">Newer</span>
   {% endif %}
